--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
   body
     block content
+  include footer.pug
