--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,2 +1,17 @@
 footer#footer
-    p Copyright (c) Mikko Rautavirta
+    .container
+        .row
+            .col-lg-3.col-md-3.col-sm-6.col-xs-12
+                ul.adress
+                    span Masan Maalaus ja Tapetointi
+                    li
+                        p Rautatieläisenkatu 12
+                    li
+                        p 00520 Helsinki
+            .col-lg-3.col-md-3.col-sm-6.col-xs-12
+                ul.contact
+                    span Ota Yhteyttä
+                    li
+                        p +358 50 3331234
+                    li
+                        p masa@masanmjat.fi
