--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,19 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.container {
+  margin-top: 50px;
+}
+
+.navbar-logo{
+  max-width:300px;
+}
+
+li.nav-item{
+  font-size:20px;
 }
