--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,12 +1,14 @@
 doctype html
 html
   head
-    title= title
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    title= 'Masan maalaus ja -tapetointi - ' + title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
   body
+    include header.pug
     block content
-  include footer.pug
+    include footer.pug
   script(src='https://code.jquery.com/jquery-3.3.1.min.js', integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=', crossorigin='anonymous')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js', integrity='sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb', crossorigin='anonymous')
   script(src='/js/bootstrap.js')
