--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,3 +17,30 @@ a {
 li.nav-item{
   font-size:20px;
 }
+
+ul{
+  list-style: none;
+}
+
+a.btn-primary{
+  background-color: #2c8674;
+  border-color: #2c8674;
+}
+
+a.btn-primary:hover{
+  background-color: #38ab98;
+  border-color: #38ab98;
+}
+
+.btn-primary:focus{
+  box-shadow: 0 0 0 0.2rem rgba(56, 171, 152, 0.5) !important;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active{
+  background-color: #38ab98 !important;
+  border-color: #38ab98 !important;
+}
+
+.btn{
+  border-radius:0 !important;
+}
