--- a/views/header.pug
+++ b/views/header.pug
@@ -5,7 +5,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
         span.navbar-toggler-icon
     #navbarSupportedContent.collapse.navbar-collapse
         ul.navbar-nav.mr-auto
-            li.nav-item
+            li.nav-item(class=title==='Värikokeilu'?'active':undefined)
                 a.nav-link(href='/varikokeilu') Värikokeilu
             li.nav-item
                 a.nav-link(href='#') Ylläpito
