--- a/views/index.pug
+++ b/views/index.pug
@@ -6,4 +6,4 @@ block content
       .col-sm-8.mx-auto
         h1 Masan Maalaus & Tapetointi
         p
-          a.btn.btn-primary(href='/', role='button') Kokeile värejä
+          a.btn.btn-primary(href='/varikokeilu', role='button') Kokeile värejä
