--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,17 +1,24 @@
 footer#footer
+    hr
     .container
         .row
             .col-lg-3.col-md-3.col-sm-6.col-xs-12
                 ul.adress
-                    span Masan Maalaus ja Tapetointi
+                    h6 Masan Maalaus ja Tapetointi
                     li
-                        p Rautatieläisenkatu 12
+                        p
+                        |  Rautatieläisenkatu 12
                     li
-                        p 00520 Helsinki
+                        p
+                        |  00520 Helsinki
             .col-lg-3.col-md-3.col-sm-6.col-xs-12
                 ul.contact
-                    span Ota Yhteyttä
+                    h6 Ota Yhteyttä
                     li
-                        p +358 50 3331234
+                        p
+                        i.fas.fa-phone
+                        |  +358 50 3331234
                     li
-                        p masa@masanmjat.fi
+                        p
+                        i.fas.fa-envelope
+                        |  masa@masanmjat.fi
