--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
     title= 'Masan maalaus ja -tapetointi - ' + title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
+    link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.6.3/css/all.css', integrity='sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/', crossorigin='anonymous')
   body
     include header.pug
     block content
