--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
   .container
-    .jumbotron
-      .col-sm-8.mx-auto
-        h1 Masan Maalaus & Tapetointi
-        p
+    .jumbotron.jumbotron-fluid
+      .container#front-hero
+        h1.display-4 Masan Maalaus & Tapetointi
+        p.lead
           a.btn.btn-primary(href='/varikokeilu', role='button') Kokeile värejä
