--- a/views/varikokeilu.pug
+++ b/views/varikokeilu.pug
@@ -4,8 +4,7 @@ block content
     script(src='https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.0/paper-full.min.js')
     script(type='text/paperscript', src='js/varikokeilu.js', canvas='myCanvas')
     .container
-        .jumbotron
-            .col-sm-8.mx-auto
-                h1 Tervetuloa värikokeiluun!
-                canvas#myCanvas
+        .col-sm-8.mx-auto.longboye
+            h1 Tervetuloa värikokeiluun!
+            canvas#myCanvas
 
