--- a/views/ylläpito.pug
+++ b/views/ylläpito.pug
@@ -1,5 +1,11 @@
 extends layout
 
 block content
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js")
     .container
         h1 Ylläpito
+        h2 Lämpötila (min):
+        canvas#lampotila(width='400', height='200')
+        h2 Ilmankosteus (max):
+        canvas#kosteus(width='400', height='200')
+    script(src='js/kaaviot.js')
