--- a/views/ylläpito.pug
+++ b/views/ylläpito.pug
@@ -4,8 +4,8 @@ block content
     script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js")
     .container
         h1 Ylläpito
-        h2 Lämpötila (min):
+        h2 Lämpötila:
         canvas#lampotila(width='400', height='200')
-        h2 Ilmankosteus (max):
+        h2 Ilmankosteus:
         canvas#kosteus(width='400', height='200')
     script(src='js/kaaviot.js')
