--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,6 @@ a {
 }
 
 .container {
-  margin-top: 50px;
   padding-bottom: 50px;
 }
 
@@ -74,4 +73,8 @@ li.nav-item.active{
 .nomarginhr{
   border: 0;
   border-top: 1px solid rgba(0,0,0,.1);
+}
+
+.padding{
+  padding:40px;
 }
