--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .container
+  .container.padding
     .jumbotron.jumbotron-fluid
       .container#front-hero
         h1.display-4 Masan Maalaus & Tapetointi
