--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,14 +22,14 @@ ul{
   list-style: none;
 }
 
-a.btn-primary{
-  background-color: #2c8674;
-  border-color: #2c8674;
+.btn-primary{
+  background-color: #2c8674!important;
+  border-color: #2c8674!important;
 }
 
-a.btn-primary:hover{
-  background-color: #38ab98;
-  border-color: #38ab98;
+.btn-primary:hover{
+  background-color: #38ab98!important;
+  border-color: #38ab98!important;
 }
 
 .btn-primary:focus{
