--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(http-equiv='Content-Security-Policy', content='upgrade-insecure-requests')
     title= 'Masan maalaus ja -tapetointi - ' + title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
