--- a/views/ylläpito.pug
+++ b/views/ylläpito.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js")
     .container
-        h1.padding Ylläpito
+        h1.padding Antureiden esimerkkidataa
         h2 Lämpötila:
         canvas#lampotila(width='400', height='200')
         hr
