--- a/views/header.pug
+++ b/views/header.pug
@@ -7,6 +7,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
         ul.navbar-nav.mr-auto
             li.nav-item(class=title==='Värikokeilu'?'active':undefined)
                 a.nav-link(href='/varikokeilu') Värikokeilu
-            li.nav-item(class=title==='Ylläpito'?'active':undefined)
-                a.nav-link(href='/yllapito') Ylläpito
+            li.nav-item(class=title==='IoT'?'active':undefined)
+                a.nav-link(href='/iot') IoT
 .nomarginhr
