--- a/views/varikokeilu.pug
+++ b/views/varikokeilu.pug
@@ -10,5 +10,6 @@ block content
                 .card-body
                     | Ohje: Aloita valitsemalla jokin kolmesta huoneen osasta. Sen jälkeen valitse osalle haluamasi väri.
                     | Voit poistaa valinnan painamalla osaa uudelleen, kun se on valittuna.
+            h4.sm-padding#kkona Paina väriä
             canvas#myCanvas(height=360,width=450)
             button.btn.btn-light#resetoi(type='button') Poista värivalinnat
