--- a/views/index.pug
+++ b/views/index.pug
@@ -19,7 +19,7 @@ block content
                     p Tarjotaksemme parasta mahdollista palvelua, käytämme antureita jotka pitävät huolen remontoitavan tilan kunnosta.
                     | Ammattilaisemme seuraavat antureiden lähettämää tietoa, jotta tiedetään milloin kannattaa jatkaa urakkaa.
                     p.sm-padding
-                        a(href='/iot') Näe, miten se toimii
+                        a.link(href='/iot') Näe, miten se toimii
                 .col-6
                     img.max-width(src='/images/tech.jpg', alt='Girl in a jacket')
         .container.padding.text-center
